feature(bin): adding java opens to jvm runtime
Signed-off-by: Dusan Malusev <dusan@dusanmalusev.dev>