@@ -249,12 +249,45 @@ fi
 YCSB_ARGS=$(echo "$@" | cut -d' ' -f3-)
 
 # About to run YCSB
-echo "$JAVA_HOME/bin/java $JAVA_OPTS -classpath $CLASSPATH $YCSB_CLASS $YCSB_COMMAND -db $BINDING_CLASS $YCSB_ARGS"
+echo "$JAVA_HOME/bin/java
+  -Djdk.attach.allowAttachSelf=true
+  --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+  --add-opens java.base/jdk.internal.module=ALL-UNNAMED
+  --add-opens=java.base/java.lang=ALL-UNNAMED
+  --add-opens=java.base/java.util=ALL-UNNAMED
+  --add-opens=java.base/java.io=ALL-UNNAMED
+  --add-opens java.base/java.net=ALL-UNNAMED
+  --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+  --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+  --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+  --add-exports java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED
+  --add-exports java.rmi/sun.rmi.registry=ALL-UNNAMED
+  --add-exports java.rmi/sun.rmi.server=ALL-UNNAMED
+  --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+  $JAVA_OPTS -classpath $CLASSPATH $YCSB_CLASS $YCSB_COMMAND -db $BINDING_CLASS $YCSB_ARGS"
 
 # Run YCSB
 # Shellcheck reports the following line as needing double quotes to prevent
 # globbing and word splitting.  However, word splitting is the desired effect
 # here.  So, the shellcheck error is disabled for this line.
 # shellcheck disable=SC2086
-"$JAVA_HOME/bin/java" $JAVA_OPTS -classpath "$CLASSPATH" $YCSB_CLASS $YCSB_COMMAND -db $BINDING_CLASS $YCSB_ARGS
+"$JAVA_HOME/bin/java" \
+  -Djdk.attach.allowAttachSelf=true \
+  --add-exports java.base/jdk.internal.misc=ALL-UNNAMED \
+  --add-opens java.base/jdk.internal.module=ALL-UNNAMED \
+  --add-opens=java.base/java.lang=ALL-UNNAMED \
+  --add-opens=java.base/java.util=ALL-UNNAMED \
+  --add-opens=java.base/java.io=ALL-UNNAMED \
+  --add-opens java.base/java.net=ALL-UNNAMED \
+  --add-opens java.base/sun.nio.ch=ALL-UNNAMED \
+  --add-exports java.base/jdk.internal.ref=ALL-UNNAMED \
+  --add-exports java.base/sun.nio.ch=ALL-UNNAMED \
+  --add-exports java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED \
+  --add-exports java.rmi/sun.rmi.registry=ALL-UNNAMED \
+  --add-exports java.rmi/sun.rmi.server=ALL-UNNAMED \
+  --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED \
+  $JAVA_OPTS \
+  -classpath "$CLASSPATH" \
+  $YCSB_CLASS $YCSB_COMMAND \
+  -db $BINDING_CLASS $YCSB_ARGS
 
